Use AutoConfiguration.imports for all auto-configs